--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-# Ignore all
-
 # Ignore R project
 *.Rproj
+.Rproj.user/**
 
 # ignore PDF files
 *.pdf
@@ -16,33 +15,12 @@
 # Mac specific
 .DS_Store
 
-# Data folder
-/data/
-# Manuscript folder
-/manuscript/
-# Presentations folder
-/presentations/
-## MAYBE REMOVE LATER
-# R Data Result Files (for now)
-/data-analysis/**/*.RDS
-# R data files
-/datasets/
-
-# Anything in old
-/old/
-/data-analysis/old
-
-# Any slurm outputs
-*.stderr.txt
-*.stdout.txt
-
 # History files
 .Rhistory
 .Rapp.history
 
 # Session Data files
 .RData
-
 # Data Files
 *.Rda
 *.RDA
@@ -61,14 +39,6 @@
 # Output files from R CMD check
 /*.Rcheck/
 
-# RStudio files
-.Rproj
-.Rproj.user/
-
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
-
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
 
@@ -82,10 +52,3 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
-
-# pkgdown site
-docs/
-
-# translation temp files
-po/*~
-inst/doc
