--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,7 @@ Suggests:
     rmarkdown
 Remotes:
     stan-dev/cmdstanr
+    Michorlab/estipop
 SystemRequirements: CmdStan >= 2.34.0
 VignetteBuilder: knitr
 RoxygenNote: 7.3.1
