--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -9,6 +9,9 @@ name: R-CMD-check.yaml
 
 permissions: read-all
 
+env:
+  _R_CHECK_FORCE_SUGGESTS_: "false"
+
 jobs:
   R-CMD-check:
     runs-on: ${{ matrix.config.os }}
@@ -28,7 +31,6 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
-      _R_CHECK_FORCE_SUGGESTS_: "false"
 
     steps:
       - uses: actions/checkout@v4
@@ -43,7 +45,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::rcmdcheck
+          extra-packages: any::rcmdcheck, estipop=?ignore
           needs: check
 
       - uses: r-lib/actions/check-r-package@v2
