--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -51,5 +51,5 @@ jobs:
       - uses: r-lib/actions/check-r-package@v2
         with:
           upload-snapshots: true
-          build: 'c("--no-manual", "--ignore-vignettes")'
+          args: 'c("--no-manual", "--ignore-vignettes")'
           build_args: 'c("--no-manual","--no-build-vignettes")'
